ICU-22675 Migrate from deprecated boxed primitive constructors to their replacements